1.0.0 (currently working on)
- [#3971] Feature: Display flash messages in the ExtJS BE module
- [#3943] Feature: Add a general e-mail form to the BE module
- [#3979] Cleanup: Move the icons from icons/ to Resources/Public/Icons
- [#3967] Cleanup: Drop SEMINARS_UPLOAD_PATH and tx_seminars_constants.php
- [#3933] Feature: Display flash messages after an e-mail has been sent and an event has been confirmed or canceled
- [#3974] Cleanup: Remove getter and setter for the owner in the old organizer and category models
- [#3970] Cleanup: Move pi1/locallang.xml to Resources/Private/Language/FrontEnd/locallang.xml
- [#3969] Cleanup: Move front-end JavaScript and CSS to the Resources folder
- [#3950] Feature: Add a hook for sending the thank-you e-mail
- [#3966] Change: Remove the partner integration for now
- [#3915] Cleanup: Drop the SEMINARS_TABLE_SEMINARS_* and SEMINARS_RECORD_TYPE_* constants
- [#3928] Cleanup: Drop all require_once that are covered by an autoloader
- [#3963] Fix: Crash in PHP 5.2 due to PHP-5.3-only array_replace
- [#2609] Change: Use mod.php for the ExtJS BE modules
- [#3938] Feature: Add a "print" button and a print stylesheet to the ExtJS BE module
- [#3936] Feature: Add a "print" button and a print stylesheet to the BE module
- [#3954] Fix: Use the default language as fallback for labels that are not available in the current BE language
- [#3952] Fix: Events list is empty
- [#3856] Change: Make ISO8859-15 the charset for the CSV for the CSV export and convert the data
- [#3926] Change: Refactor tx_seminars_BackEndExtJs_Ajax with Extract Subclass
- [#3839] Fix: Clarify the label for the organizer footer (thanks to Philipp Gampe)
- [#3548] Feature: Use flash messages in the BE module
- [#3930] Fix: Typo in the reference: boh -> both
- [#3920] Fix: Crash on the second registration page
- [#3910] Feature: Load records from the current page and its subpages in the grids