@@ -1,6 +1,6 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2010-06-26 20:29
+// This file was generated on 2010-06-28 14:04
 
 $extensionPath = t3lib_extMgm::extPath('seminars');
 return array(
@@ -52,6 +52,7 @@ return array(
 	'tx_seminars_backendextjs_ajax_organizerslist' => $extensionPath . 'BackEndExtJs/Ajax/OrganizersList.php',
 	'tx_seminars_backendextjs_ajax_registrationslist' => $extensionPath . 'BackEndExtJs/Ajax/RegistrationsList.php',
 	'tx_seminars_backendextjs_ajax_speakerslist' => $extensionPath . 'BackEndExtJs/Ajax/SpeakersList.php',
+	'tx_seminars_backendextjs_ajax_stateprovider' => $extensionPath . 'BackEndExtJs/Ajax/StateProvider.php',
 	'tx_seminars_frontend_abstractview' => $extensionPath . 'FrontEnd/AbstractView.php',
 	'tx_seminars_frontend_categorylist' => $extensionPath . 'FrontEnd/CategoryList.php',
 	'tx_seminars_frontend_countdown' => $extensionPath . 'FrontEnd/Countdown.php',
@@ -146,6 +147,7 @@ return array(
 	'tx_seminars_backendextjs_ajax_organizerslisttest' => $extensionPath . 'tests/BackEndExtJs/Ajax/OrganizersListTest.php',
 	'tx_seminars_backendextjs_ajax_registrationslisttest' => $extensionPath . 'tests/BackEndExtJs/Ajax/RegistrationsListTest.php',
 	'tx_seminars_backendextjs_ajax_speakerslisttest' => $extensionPath . 'tests/BackEndExtJs/Ajax/SpeakersListTest.php',
+	'tx_seminars_backendextjs_ajax_stateprovidertest' => $extensionPath . 'tests/BackEndExtJs/Ajax/StateProviderTest.php',
 	'tx_seminars_frontend_categorylisttest' => $extensionPath . 'tests/FrontEnd/CategoryListTest.php',
 	'tx_seminars_frontend_countdowntest' => $extensionPath . 'tests/FrontEnd/CountdownTest.php',
 	'tx_seminars_frontend_defaultcontrollertest' => $extensionPath . 'tests/FrontEnd/DefaultControllerTest.php',
