@@ -72,4 +72,8 @@ $TYPO3_CONF_VARS['BE']['AJAX']['Seminars::getSpeakers'] = t3lib_extmgm::extPath(
 	'BackEndExtJs/Ajax/Dispatcher.php:tx_seminars_BackEndExtJs_Ajax_Dispatcher->dispatch';
 $TYPO3_CONF_VARS['BE']['AJAX']['Seminars::getOrganizers'] = t3lib_extmgm::extPath($_EXTKEY) .
 	'BackEndExtJs/Ajax/Dispatcher.php:tx_seminars_BackEndExtJs_Ajax_Dispatcher->dispatch';
+$TYPO3_CONF_VARS['BE']['AJAX']['Seminars::getState'] = t3lib_extmgm::extPath($_EXTKEY) .
+	'BackEndExtJs/Ajax/Dispatcher.php:tx_seminars_BackEndExtJs_Ajax_Dispatcher->dispatch';
+$TYPO3_CONF_VARS['BE']['AJAX']['Seminars::setState'] = t3lib_extmgm::extPath($_EXTKEY) .
+	'BackEndExtJs/Ajax/Dispatcher.php:tx_seminars_BackEndExtJs_Ajax_Dispatcher->dispatch';
 ?>
