@@ -1,4 +1,5 @@
 1.0.0 (currently working on)
+- [#3885] Feature: Save the current active tab in the BE user settings BE_USER->uc
 - [#3971] Feature: Display flash messages in the ExtJS BE module
 - [#3943] Feature: Add a general e-mail form to the BE module
 - [#3979] Cleanup: Move the icons from icons/ to Resources/Public/Icons
